# ex04-reverse-engineering

./: .gitignore  README.md  main.py  pyproject.toml
artifacts/graphify-out/: .graphify_labels.json  graph.html  graph.json  manifest.json
artifacts/graphify-out/2026-06-22/: .graphify_analysis.json  .graphify_semantic_marker  GRAPH_REPORT.md  graph.json
artifacts/graphify-out/cache/: stat-index.json
docs/: PLAN.md  PRD.md  TODO.md
obsidian/: bug_report.md  hot.md  index.md  mathsquiz.md
obsidian/.obsidian/: workspace.json
reports/: bug_analysis.md  token_comparison.md
src/mathsquiz/: __init__.py  agent.py  naive_agent.py  quiz.py  runner.py
tests/: test_agents.py  test_quiz.py  test_runner.py
