[project]
name = "ex04-reverse-engineering"
version = "0.1.0"
description = "Reverse engineering and graph-guided bug detection with Grphify and LangGraph"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.111.0",
    "graphifyy>=0.8.44",
    "langgraph>=1.2.6",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mathsquiz"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 85
